smaller chnages to base css on text on smaller devices and hamburger button color not working. Final test added to testing on my read me along with bugs section

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -122,6 +122,16 @@ a.category-badge > span.badge:hover{
     background-color: transparent;
     border: 0;
 }
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%;
+    color: #37168A;
+}
 .bag-color{
     color: #37168A;
 }
@@ -372,7 +382,7 @@ p {
     color: #37168A;
 }
   h2{
-    color: white;
+    color: #37168A;
   }
   /* fixed top navbar only on medium and up */
   @media (min-width: 992px) {
@@ -435,6 +445,12 @@ p {
         -ms-flex: 1 1 0%;
         min-width: 0;
         margin-bottom: 0;
+    }
+    .mb-0, .my-0 {
+        margin-bottom: 0!important;
+        color: #37168A;
+        font-weight: 500;
+        font-size: 10px;
     }
 }
 /* all muted text headers */
